--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -14,6 +14,8 @@
   --primary: #9f7f2e;
   /* Texto principal ou contraste */
   --text-contrast: #7a6651;
+
+  --page-min-height: calc(100vh - 8.25rem);
 }
 
 @theme inline {
